# Voxel-Engine-

./: .gitignore  CMakeLists.txt  Minecraft.aps  README.md  Resource.aps  imgui.ini
Minecraft/x64/Debug/: Minecraft.exe.recipe  Resource.res
Minecraft/x64/Release/: Chunk.nativecodeanalysis.sarif  CodeAnalysisResultManifest.txt  Minecraft.exe.recipe  Minecraft.ipdb  RCa21740
Resources/Shaders/: FBO.frag  FBO.vert  Text.frag  Text.vert  UIpass.frag  UIpass.vert  brdf.frag  brdf.vert  geo.frag  geo.vert  irradiance.frag  model.frag  model.vert  prefilter.frag  prefilter.vert  skybox.frag  skybox.vert  ssao.frag  ssao.vert  water.frag  water.vert  world.frag  world.vert
Resources/Shaders/Backup/: model.frag  model.vert
Resources/models/: Steve.gltf
Resources/textures/: Atlas.xcf  Atlas2.xcf
bakup/: Chunk.h  World.h
include/: Animation.h  Animator.h  Block.h  Bone.h  Camera.h  Chunk.h  Decoration.h  EBO.h  Entity.h  Mesh.h  Model.h  RCa17464  RenderEngine.h  Resource.rc  Shaders.h  TextRenderer.h  Texture.h  TextureImp.h  VAO.h  VBO.h  World.h
src/: Block.cpp  Chunk.cpp  Entity.cpp  main.cpp
